--- a/data/data_analysis.ipynb
+++ b/data/data_analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "employed-wildlife",
+   "id": "limiting-adapter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "partial-emphasis",
+   "id": "binary-acrylic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "referenced-andorra",
+   "id": "expressed-charm",
    "metadata": {},
    "source": [
     "# Dataset size"
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "wired-doubt",
+   "id": "spatial-taiwan",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "patient-jersey",
+   "id": "worth-debate",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regulated-blast",
+   "id": "modular-absence",
    "metadata": {},
    "source": [
     "# Symbol Distribution\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "comprehensive-capture",
+   "id": "distant-inspection",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regional-scanning",
+   "id": "alternate-aaron",
    "metadata": {},
    "source": [
     "# Length distribution"
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "funny-therapy",
+   "id": "welsh-annotation",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inside-saying",
+   "id": "confirmed-broadway",
    "metadata": {},
    "source": [
     "# Result distribution"
@@ -273,8 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "sorted-vietnam",
+   "execution_count": 69,
+   "id": "contrary-diamond",
    "metadata": {},
    "outputs": [
     {
@@ -348,17 +348,36 @@
     "median2 = int(np.median([x['res'] for x in split2dataset[split2]]))\n",
     "plt.title(f'Median({split1})={median1}, Median({split2})={median2}')\n",
     "\n",
-    "dataset = split2dataset['test']\n",
-    "print(len([1 for x in dataset if x['res'] > 100]) / len(dataset))\n",
-    "\n",
     "plt.legend(ncol=2)\n",
     "plt.savefig('figures/result_distribution.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "false-allen",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.28972543972543974\n",
+      "0.3644\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = split2dataset['test']\n",
+    "print(len([1 for x in dataset if x['res'] > 100]) / len(dataset))\n",
+    "\n",
+    "print(sum([v for k, v in zip(bar_keys, data_bars['test-LL']) if k < 100]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "permanent-transparency",
+   "id": "mental-accounting",
    "metadata": {},
    "source": [
     "# Tree depth"
@@ -367,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "assisted-azerbaijan",
+   "id": "worth-adrian",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "single-hampshire",
+   "id": "hydraulic-bunch",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "offensive-configuration",
+   "id": "fitted-pharmacy",
    "metadata": {},
    "source": [
     "## Parenthesis depth"
@@ -479,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "joint-glory",
+   "id": "progressive-fourth",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "editorial-mason",
+   "id": "round-cinema",
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "single-height",
+   "id": "republican-bradford",
    "metadata": {},
    "source": [
     "# Visualize rendered images"
@@ -585,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "naked-parameter",
+   "id": "stuck-baptist",
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "linear-channels",
+   "id": "associate-gamma",
    "metadata": {},
    "outputs": [],
    "source": []
