add data sampling and max op

--- a/data/fewshot_generation.ipynb
+++ b/data/fewshot_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "closed-variable",
+   "id": "attached-timothy",
    "metadata": {},
    "source": [
     "# Generate few shot splits"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "interested-crime",
+   "id": "exclusive-equity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "import numpy as np\n",
     "from collections import Counter\n",
     "\n",
-    "from domain import SYM2PROG, Program, NULL_VALUE\n",
+    "from domain import SYM2PROG, Program, NULL_VALUE, FEWSHOT_OPERATORS, FEWSHOT_NUMBERS\n",
     "import sys\n",
     "from helper import *"
    ]
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "grand-calculator",
+   "id": "norman-ideal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +48,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "right-baseball",
+   "id": "juvenile-conference",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fewshot_nums = list('xy')\n",
-    "fewshot_ops = list('abcd')\n",
+    "fewshot_nums = FEWSHOT_NUMBERS\n",
+    "fewshot_ops = FEWSHOT_OPERATORS\n",
     "fewshot_concepts = fewshot_nums + fewshot_ops\n",
     "op2precedence.update({'a': op2precedence['+'], 'b': op2precedence['+'], 'c': op2precedence['*'], 'd': op2precedence['*']})\n",
     "sym2arity.update({x: 0 for x in fewshot_nums})\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "expected-bulgarian",
+   "id": "smoking-pierce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "simplified-proposal",
+   "id": "negative-dialogue",
    "metadata": {},
    "outputs": [
     {
