--- a/data/gpt3/prompt.ipynb
+++ b/data/gpt3/prompt.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fabulous-population",
+   "id": "immune-aggregate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "restricted-aggregate",
+   "id": "sharp-blanket",
    "metadata": {},
    "outputs": [
     {
@@ -40,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "informational-prospect",
+   "execution_count": 19,
+   "id": "flying-beast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +52,24 @@
     "def expr2prompt_cot(expr):\n",
     "    cot_trigger = 'Let\\'s think step-by-step.'\n",
     "    prompt = f'Q: What is {expr}?\\nA:' + ' ' + cot_trigger\n",
-    "    return prompt"
+    "    return prompt\n",
+    "\n",
+    "def answer_cleansing(res):\n",
+    "    res = res.strip(' .')\n",
+    "    res = res.replace('\\n', ' ').split(' ')[::-1]\n",
+    "    for r in res:\n",
+    "        try:\n",
+    "            r = float(r)\n",
+    "            return r\n",
+    "        except:\n",
+    "            pass\n",
+    "    return None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "numeric-martin",
+   "id": "requested-saying",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "atmospheric-telescope",
+   "id": "oriented-grant",
    "metadata": {},
    "outputs": [
     {
@@ -102,23 +113,10 @@
     }
    ],
    "source": [
-    "def response2ans(response):\n",
-    "    res = response[\"choices\"][0]['text']\n",
-    "    res = res.strip(' .')\n",
-    "    res = res.replace('\\n', ' ').split(' ')[::-1]\n",
-    "    for r in res:\n",
-    "        try:\n",
-    "            r = float(r)\n",
-    "            return r\n",
-    "        except:\n",
-    "            pass\n",
-    "    return None\n",
-    "\n",
-    "count = 0\n",
     "eval2res = {}\n",
     "for sample, response in zip(test_set, responses):\n",
     "    expr, ans, e = sample\n",
-    "    pred = response2ans(response)\n",
+    "    pred = response2ans(response[\"choices\"][0]['text'])\n",
     "#     if pred is None:\n",
     "#         print(expr, ans, e, response[\"choices\"][0]['text'])\n",
     "    if e not in eval2res:\n",
@@ -136,15 +134,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "realistic-travel",
+   "execution_count": 17,
+   "id": "advanced-leonard",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 73%|█████████████████████████████▊           | 364/500 [49:31<12:39,  5.58s/it]"
+      "100%|█████████████████████████████████████████| 500/500 [59:57<00:00,  7.19s/it]\n"
      ]
     }
    ],
@@ -166,8 +164,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "sustainable-lloyd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LL: 0.06\n",
+      "I: 0.42\n",
+      "LS: 0.05\n",
+      "SS: 0.36\n",
+      "SL: 0.49\n",
+      "Avg: 0.276\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval2res = {}\n",
+    "for response in responses:\n",
+    "    expr, ans, e = response[0]\n",
+    "    pred = answer_cleansing(response[-1])\n",
+    "#     if pred is None:\n",
+    "#         print(expr, ans, e, response[\"choices\"][0]['text'])\n",
+    "    if e not in eval2res:\n",
+    "        eval2res[e] = []\n",
+    "    if pred and int(pred) == int(eval(expr)):\n",
+    "        eval2res[e].append(1)\n",
+    "    else:\n",
+    "        eval2res[e].append(0)\n",
+    "\n",
+    "for e, res in eval2res.items():\n",
+    "    print(f'{e}: {sum(res) / len(res)}')\n",
+    "avg_acc = sum([sum(x) for x in eval2res.values()]) / len(test_set)\n",
+    "print(f'Avg: {avg_acc}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "academic-holder",
+   "id": "healthy-factory",
    "metadata": {},
    "outputs": [],
    "source": []
