--- a/results/error_case.ipynb
+++ b/results/error_case.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "intermediate-reserve",
+   "id": "familiar-project",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "parliamentary-fantasy",
+   "id": "mysterious-article",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "found-dependence",
+   "id": "monthly-angle",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ambient-poultry",
+   "id": "negative-frequency",
    "metadata": {},
    "outputs": [
     {
@@ -103,14 +103,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "naval-immunology",
+   "id": "apparent-compression",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 729/729 [00:20<00:00, 35.88it/s]\n"
+      "100%|█████████████████████████████████████████| 729/729 [00:21<00:00, 34.71it/s]\n"
      ]
     }
    ],
@@ -183,8 +183,201 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "remarkable-weight",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('result_acc/avg', 0.6153367653367653),\n",
+       "             ('result_acc/length/1', 1.0),\n",
+       "             ('result_acc/length/3', 1.0),\n",
+       "             ('result_acc/length/5', 0.6381842456608812),\n",
+       "             ('result_acc/length/7', 0.6783124588002637),\n",
+       "             ('result_acc/length/9', 0.6769383697813122),\n",
+       "             ('result_acc/length/11', 0.7019230769230769),\n",
+       "             ('result_acc/length/13', 0.6765420106847985),\n",
+       "             ('result_acc/length/15', 0.6767028627838104),\n",
+       "             ('result_acc/length/17', 0.6827348745696016),\n",
+       "             ('result_acc/length/19', 0.7092511013215859),\n",
+       "             ('result_acc/length/21', 0.6781888997078871),\n",
+       "             ('result_acc/length/23', 0.6896039603960396),\n",
+       "             ('result_acc/length/25', 0.6877783275606135),\n",
+       "             ('result_acc/length/27', 0.6927680798004987),\n",
+       "             ('result_acc/length/29', 0.6830168776371308),\n",
+       "             ('result_acc/length/31', 0.650210716435882),\n",
+       "             ('result_acc/length/33', 0.6063902107409925),\n",
+       "             ('result_acc/length/35', 0.5920471281296024),\n",
+       "             ('result_acc/length/37', 0.5732436472346786),\n",
+       "             ('result_acc/length/39', 0.5581912527798369),\n",
+       "             ('result_acc/length/41', 0.5543154761904762),\n",
+       "             ('result_acc/length/43', 0.5416666666666666),\n",
+       "             ('result_acc/length/45', 0.5333333333333333),\n",
+       "             ('result_acc/length/47', 0.5045523520485584),\n",
+       "             ('result_acc/length/49', 0.4803030303030303),\n",
+       "             ('result_acc/length/51', 0.4598278335724534),\n",
+       "             ('result_acc/length/53', 0.47095274980635166),\n",
+       "             ('result_acc/length/55', 0.4394409937888199),\n",
+       "             ('result_acc/length/57', 0.43330571665285833),\n",
+       "             ('result_acc/length/59', 0.4051172707889126),\n",
+       "             ('result_acc/length/61', 0.3746268656716418),\n",
+       "             ('result_acc/length/63', 0.4117647058823529),\n",
+       "             ('result_acc/length/65', 0.3383458646616541),\n",
+       "             ('result_acc/length/67', 0.2631578947368421),\n",
+       "             ('result_acc/length/69', 0.125),\n",
+       "             ('result_acc/symbol/(', 0.6017327861377109),\n",
+       "             ('result_acc/symbol/)', 0.6017327861377109),\n",
+       "             ('result_acc/symbol/*', 0.5743320338499572),\n",
+       "             ('result_acc/symbol/+', 0.6097409721890951),\n",
+       "             ('result_acc/symbol/-', 0.626290340106487),\n",
+       "             ('result_acc/symbol/div', 0.6332542345143606),\n",
+       "             ('result_acc/symbol/0', 0.6243068774311016),\n",
+       "             ('result_acc/symbol/1', 0.6112270379365785),\n",
+       "             ('result_acc/symbol/2', 0.6013527223537369),\n",
+       "             ('result_acc/symbol/3', 0.5945829608291117),\n",
+       "             ('result_acc/symbol/4', 0.5900542974440471),\n",
+       "             ('result_acc/symbol/5', 0.5854958294717331),\n",
+       "             ('result_acc/symbol/6', 0.5805080589793049),\n",
+       "             ('result_acc/symbol/7', 0.5765382854900936),\n",
+       "             ('result_acc/symbol/8', 0.5746181724048667),\n",
+       "             ('result_acc/symbol/9', 0.5705823325672482),\n",
+       "             ('result_acc/digit/0', 1.0),\n",
+       "             ('result_acc/digit/1', 1.0),\n",
+       "             ('result_acc/digit/2', 1.0),\n",
+       "             ('result_acc/digit/3', 1.0),\n",
+       "             ('result_acc/digit/4', 1.0),\n",
+       "             ('result_acc/digit/5', 1.0),\n",
+       "             ('result_acc/digit/6', 1.0),\n",
+       "             ('result_acc/digit/7', 1.0),\n",
+       "             ('result_acc/digit/8', 1.0),\n",
+       "             ('result_acc/digit/9', 1.0),\n",
+       "             ('result_acc/result/0', 1.0),\n",
+       "             ('result_acc/result/1', 0.9332777314428691),\n",
+       "             ('result_acc/result/2', 0.9230346344145135),\n",
+       "             ('result_acc/result/3', 0.8781869688385269),\n",
+       "             ('result_acc/result/4', 0.9010856453558505),\n",
+       "             ('result_acc/result/5', 0.896640826873385),\n",
+       "             ('result_acc/result/6', 0.8994845360824743),\n",
+       "             ('result_acc/result/7', 0.9226027397260274),\n",
+       "             ('result_acc/result/8', 0.9071702944942381),\n",
+       "             ('result_acc/result/9', 0.9137813985064495),\n",
+       "             ('result_acc/result/10', 0.8799479919098526),\n",
+       "             ('result_acc/result/20', 0.829051044878383),\n",
+       "             ('result_acc/result/30', 0.790135883241067),\n",
+       "             ('result_acc/result/40', 0.8159547738693468),\n",
+       "             ('result_acc/result/50', 0.7578671328671329),\n",
+       "             ('result_acc/result/60', 0.7660044150110376),\n",
+       "             ('result_acc/result/70', 0.771838331160365),\n",
+       "             ('result_acc/result/80', 0.7150259067357513),\n",
+       "             ('result_acc/result/90', 0.7226277372262774),\n",
+       "             ('result_acc/result/100', 0.0030207028659839387),\n",
+       "             ('result_acc/eval/I', 0.981062124248497),\n",
+       "             ('result_acc/eval/LL', 0.2239),\n",
+       "             ('result_acc/eval/LS', 0.79),\n",
+       "             ('result_acc/eval/SL', 0.11423611111111111),\n",
+       "             ('result_acc/eval/SS', 0.97125),\n",
+       "             ('result_acc/tree_depth/1', 1.0),\n",
+       "             ('result_acc/tree_depth/2', 1.0),\n",
+       "             ('result_acc/tree_depth/3', 0.640282131661442),\n",
+       "             ('result_acc/tree_depth/4', 0.6782316731952994),\n",
+       "             ('result_acc/tree_depth/5', 0.6801782978130659),\n",
+       "             ('result_acc/tree_depth/6', 0.6531064226599836),\n",
+       "             ('result_acc/tree_depth/7', 0.5938226502822982),\n",
+       "             ('result_acc/tree_depth/8', 0.5415375950436496),\n",
+       "             ('result_acc/tree_depth/9', 0.48913896885632036),\n",
+       "             ('result_acc/tree_depth/10', 0.4505420054200542),\n",
+       "             ('result_acc/tree_depth/11', 0.40476190476190477),\n",
+       "             ('result_acc/tree_depth/12', 0.3235294117647059),\n",
+       "             ('result_acc/tree_depth/13', 0.3076923076923077),\n",
+       "             ('result_acc/tree_depth/14', 0.0),\n",
+       "             ('result_acc/tree_depth/15', 0.0),\n",
+       "             ('result_acc/ps_depth/0', 0.8315217391304348),\n",
+       "             ('result_acc/ps_depth/1', 0.6781156954487452),\n",
+       "             ('result_acc/ps_depth/2', 0.633865185914107),\n",
+       "             ('result_acc/ps_depth/3', 0.5758226037195995),\n",
+       "             ('result_acc/ps_depth/4', 0.506257500428596),\n",
+       "             ('result_acc/ps_depth/5', 0.4483457123565159),\n",
+       "             ('result_acc/ps_depth/6', 0.4131944444444444),\n",
+       "             ('result_acc/ps_depth/7', 0.39473684210526316),\n",
+       "             ('result_acc/ps_depth/8', 0.2),\n",
+       "             ('result_acc/ps_depth/9', 0.0),\n",
+       "             ('result_acc/max_dep/0', 1.0),\n",
+       "             ('result_acc/max_dep/1', 1.0),\n",
+       "             ('result_acc/max_dep/2', 0.7111426543647977),\n",
+       "             ('result_acc/max_dep/3', 0.6289893617021277),\n",
+       "             ('result_acc/max_dep/4', 0.7227626459143969),\n",
+       "             ('result_acc/max_dep/5', 0.6635354397950469),\n",
+       "             ('result_acc/max_dep/6', 0.6846566826787228),\n",
+       "             ('result_acc/max_dep/7', 0.6251089799476897),\n",
+       "             ('result_acc/max_dep/8', 0.70777088653776),\n",
+       "             ('result_acc/max_dep/9', 0.6388692579505301),\n",
+       "             ('result_acc/max_dep/10', 0.6624203821656051),\n",
+       "             ('result_acc/max_dep/11', 0.6089015151515151),\n",
+       "             ('result_acc/max_dep/12', 0.6562860438292965),\n",
+       "             ('result_acc/max_dep/13', 0.637291280148423),\n",
+       "             ('result_acc/max_dep/14', 0.6366267052501033),\n",
+       "             ('result_acc/max_dep/15', 0.5911379657603223),\n",
+       "             ('result_acc/max_dep/16', 0.6339779005524862),\n",
+       "             ('result_acc/max_dep/17', 0.5661846496106785),\n",
+       "             ('result_acc/max_dep/18', 0.6123567513702043),\n",
+       "             ('result_acc/max_dep/19', 0.559748427672956),\n",
+       "             ('result_acc/max_dep/20', 0.569012547735952),\n",
+       "             ('result_acc/max_dep/21', 0.5244956772334294),\n",
+       "             ('result_acc/max_dep/22', 0.5595890410958904),\n",
+       "             ('result_acc/max_dep/23', 0.5080128205128205),\n",
+       "             ('result_acc/max_dep/24', 0.5888634630053394),\n",
+       "             ('result_acc/max_dep/25', 0.5036363636363637),\n",
+       "             ('result_acc/max_dep/26', 0.5446428571428571),\n",
+       "             ('result_acc/max_dep/27', 0.4543524416135881),\n",
+       "             ('result_acc/max_dep/28', 0.5397923875432526),\n",
+       "             ('result_acc/max_dep/29', 0.40966921119592875),\n",
+       "             ('result_acc/max_dep/30', 0.5102599179206566),\n",
+       "             ('result_acc/max_dep/31', 0.3895705521472393),\n",
+       "             ('result_acc/max_dep/32', 0.49411764705882355),\n",
+       "             ('result_acc/max_dep/33', 0.36293436293436293),\n",
+       "             ('result_acc/max_dep/34', 0.49616858237547895),\n",
+       "             ('result_acc/max_dep/35', 0.44554455445544555),\n",
+       "             ('result_acc/max_dep/36', 0.48223350253807107),\n",
+       "             ('result_acc/max_dep/37', 0.44970414201183434),\n",
+       "             ('result_acc/max_dep/38', 0.5065359477124183),\n",
+       "             ('result_acc/max_dep/39', 0.4566929133858268),\n",
+       "             ('result_acc/max_dep/40', 0.43873517786561267),\n",
+       "             ('result_acc/max_dep/41', 0.4107142857142857),\n",
+       "             ('result_acc/max_dep/42', 0.4864864864864865),\n",
+       "             ('result_acc/max_dep/43', 0.3157894736842105),\n",
+       "             ('result_acc/max_dep/44', 0.47435897435897434),\n",
+       "             ('result_acc/max_dep/45', 0.4576271186440678),\n",
+       "             ('result_acc/max_dep/46', 0.4247787610619469),\n",
+       "             ('result_acc/max_dep/47', 0.3617021276595745),\n",
+       "             ('result_acc/max_dep/48', 0.43661971830985913),\n",
+       "             ('result_acc/max_dep/49', 0.3142857142857143),\n",
+       "             ('result_acc/max_dep/50', 0.2545454545454545),\n",
+       "             ('result_acc/max_dep/51', 0.25),\n",
+       "             ('result_acc/max_dep/52', 0.28125),\n",
+       "             ('result_acc/max_dep/53', 0.3333333333333333),\n",
+       "             ('result_acc/max_dep/54', 0.35294117647058826),\n",
+       "             ('result_acc/max_dep/55', 0.14285714285714285),\n",
+       "             ('result_acc/max_dep/56', 0.14285714285714285),\n",
+       "             ('result_acc/max_dep/57', 0.3333333333333333),\n",
+       "             ('result_acc/max_dep/58', 0.4),\n",
+       "             ('result_acc/max_dep/59', 1.0),\n",
+       "             ('result_acc/max_dep/60', 0.5)])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
-   "id": "explicit-today",
+   "id": "cellular-adoption",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "middle-longer",
+   "id": "white-grocery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "royal-riding",
+   "id": "satisfied-consensus",
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "local-bracket",
+   "id": "derived-engineer",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1365,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gothic-mainland",
+   "id": "scheduled-qualification",
    "metadata": {},
    "outputs": [],
    "source": []
