--- a/rebuttal/fewshot_human.ipynb
+++ b/rebuttal/fewshot_human.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "947c99e6-1d22-4eb7-b08b-909a89ee2a73",
    "metadata": {},
    "outputs": [],
@@ -66,12 +66,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x 10 8\n",
-      "y 10 8\n",
-      "a 10 8\n",
-      "b 10 8\n",
-      "c 10 8\n",
-      "d 10 8\n"
+      "x 10 4\n",
+      "y 10 4\n",
+      "a 10 4\n",
+      "b 10 4\n",
+      "c 10 4\n",
+      "d 10 4\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
     "test_set = []\n",
     "\n",
     "max_expr_len = 5\n",
-    "n_per_eval = 2\n",
+    "n_per_eval = 1\n",
     "eval_splits = ['I', 'SS', 'LS', 'SL', 'LL']\n",
     "\n",
     "for fs, data in dataset_ori.items():\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "ffc0e239-3ad5-4c42-8cdb-81f1cf9129cb",
    "metadata": {},
    "outputs": [
@@ -126,8 +126,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 60/60 [00:00<00:00, 2626.34it/s]\n",
-      "100%|██████████| 48/48 [00:00<00:00, 1948.69it/s]\n"
+      "100%|██████████| 60/60 [00:00<00:00, 3491.57it/s]\n",
+      "100%|██████████| 24/24 [00:00<00:00, 2039.33it/s]\n"
      ]
     }
    ],
@@ -143,7 +143,7 @@
     "        # input()\n",
     "        file_name = f'{split}_{i:08d}.jpg'\n",
     "        expr_img.save('../docs/fewshot/images/' + file_name)\n",
-    "        dataset[split].append(['fewshot/images/' + file_name, res if split == 'train' else '?'])\n",
+    "        dataset[split].append(['fewshot/images/' + file_name, res])\n",
     "json.dump(dataset, open('../docs/fewshot/data.json', 'w'))"
    ]
   },
