--- a/rebuttal/fewshot_human.ipynb
+++ b/rebuttal/fewshot_human.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 64,
    "id": "f9391205-542a-4e19-872f-3fe0db205337",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "id": "947c99e6-1d22-4eb7-b08b-909a89ee2a73",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "id": "aa64cbf6-1293-4cf5-9989-377ab9db315f",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 67,
    "id": "493074db",
    "metadata": {},
    "outputs": [
@@ -66,8 +66,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x 3 4\n",
-      "y 3 4\n",
+      "x 10 4\n",
+      "y 10 4\n",
       "a 10 4\n",
       "b 10 4\n",
       "c 10 4\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 68,
    "id": "a3dc07de-e23d-4188-a38c-a6b823a0d435",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "id": "ffc0e239-3ad5-4c42-8cdb-81f1cf9129cb",
    "metadata": {},
    "outputs": [
@@ -132,8 +132,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 46/46 [00:00<00:00, 2573.67it/s]\n",
-      "100%|██████████| 24/24 [00:00<00:00, 2263.72it/s]\n"
+      "100%|██████████| 60/60 [00:00<00:00, 3729.38it/s]\n",
+      "100%|██████████| 24/24 [00:00<00:00, 2334.17it/s]\n"
      ]
     }
    ],
@@ -155,8 +155,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "f7eec7a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[13, 3, 132, 136, 20, 17, 192, 756, 28, 32, 512, 144, 0, 55, 6, 3, 0, 29, 257, 140, 0, 40, 10, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([x[1] for x in dataset['test']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8067ffc",
    "metadata": {},
    "outputs": [],
    "source": []
